# hostamar

./: .dockerignore  .env  .env.example  .gitignore  .vercelignore  3.0.1  Dockerfile  Jenkinsfile  LICENSE  README.md  ROADMAP.md  TASKS.md  agents.yaml  deploy.sh  deploy_hostamar.bat  deploy_production.ps1  docker-compose.prod.yml  docker-compose.yml  fix_and_run.bat  init_production.ps1  k8s-deployment.yaml  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  repair_dependencies.bat  requirements.txt  run_debug.bat  run_debug_v2.bat  run_debug_v3.bat  run_emergency.bat  run_final.bat  run_safe_mode.bat  run_test.bat  test_server.py  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: deploy-cloudflare.yml  deploy.yml  docker.yml  main.yml  pr-check.yml  set-vercel-env.yml
app/: auth.py  brain.py  factory.py  guardrails.py  knowledge.py  layout.tsx  main.py  main_safe.py  mobile.py  monitoring.py  page.tsx  payment.py  security.py  storage.py  tools.py
app/about/: page.tsx
app/admin/: page.tsx
app/ai-chat/: page.tsx
app/blog/: page.tsx
app/contact/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/login/: page.tsx
apps/: README.md
backend/: package.json  server.js
config_files/: nginx.conf  prometheus.yml
frontend/: Dockerfile  index.html  package.json  vite.config.js
hostamar-cli/: cli.py
lib/: auth-config.ts  auth.ts  email-local.ts  email.ts  prisma.ts  uploadthing.ts  video-generator.ts
prisma/: schema.prisma
scripts/: cron-health.sh  cron-tunnel.sh  expand_disk.sh  setup_host_proxy.sh
(+60 files in other folders)
